Added mappers tests